add PostDetails Screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,26 +1,34 @@
 .App {
-  text-align: center; }
+  text-align: center;
+}
 
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white; }
-  .App-header .App-logo {
+  color: white;
+  .App-logo {
     animation: App-logo-spin infinite 20s linear;
-    height: 80px; }
+    height: 80px;
+  }
+}
 
 .App-title {
-  font-size: 1.5em; }
+  font-size: 1.5em;
+}
 
 .App-intro {
-  font-size: large; }
+  font-size: large;
+}
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg); }
+    transform: rotate(0deg);
+  }
   to {
-    transform: rotate(360deg); } }
+    transform: rotate(360deg);
+  }
+}
 
 .container-button .btn {
   color: #696969;
@@ -30,4 +38,5 @@
   letter-spacing: 1px;
   display: inline-block;
   padding: 0 10px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
