--- a/src/components/MediaModal/styles.scss
+++ b/src/components/MediaModal/styles.scss
@@ -3,3 +3,13 @@
   margin: 30px;
   border-color: black;
 }
+
+.list-media {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  overflow-y: scroll;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  // grid-column-gap: 50px;
+}
